--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="action_settings">Configuración</string>
     <string name="welcome_text">Buscador de álbumes</string>
     <string name="welcome_text_footer">Ingresa el nombre del artista a buscar</string>
+    <string name="placeholder_buscador">Ingrese el nombre del artista a buscar</string>
 
 </resources>
